add second part

--- a/DM19-Lab2-Homework.ipynb
+++ b/DM19-Lab2-Homework.ipynb
@@ -1425,6 +1425,14 @@
     "    plt.annotate(label, xy=(x,y), xytext=(0,0),  textcoords='offset points')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Second Part\n",
+    "Since second part has so many codes, please see \"Second Part\" jupyter notebook for the work. Thank you!"
+   ]
   }
  ],
  "metadata": {
