finish second&third part

--- a/DM19-Lab2-Homework.ipynb
+++ b/DM19-Lab2-Homework.ipynb
@@ -256,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -458,7 +460,9 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create sorted list\n",
@@ -472,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create sorted list\n",
@@ -486,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1430,9 +1438,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Second Part\n",
-    "Since second part has so many codes, please see \"Second Part\" jupyter notebook for the work. Thank you!"
+    "### Second&Third Part\n",
+    "Since second&third part has so many codes, please see \"Second&Third Part\" jupyter notebook for the work. Thank you!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
