add some words in third part

--- a/Second&Third Part.ipynb
+++ b/Second&Third Part.ipynb
@@ -577,7 +577,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#tweets_DM.json\n",
@@ -1042,7 +1044,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## save to pickle file\n",
@@ -1161,7 +1165,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# tokenize texts using tokenize_text()\n",
@@ -1310,7 +1316,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# translate unigrams to vector using w2v()\n",
@@ -1684,7 +1692,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#drop nan value in train and replace nan value with all zero vector in test\n",
@@ -1739,7 +1749,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#We couldn't save train_tweets_vec_df.pkl by jupyter since the kernal will be crashed, We save the files in local environment\n",
@@ -1749,7 +1761,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#prepare X and Y training data and label\n",
@@ -1760,7 +1774,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train = np.array(X_train)"
@@ -1844,7 +1860,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## build LinearSVC model\n",
@@ -1861,7 +1879,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -2027,7 +2047,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predict_test = pd.DataFrame(predict_test)\n",
@@ -2104,7 +2126,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since traditional machine learning with w2v couldn't get high score, I try to use deep learning."
+    "Since traditional machine learning with w2v couldn't get high score, I try to use deep learning.\n",
+    "The network and training processing below is following DM19_Lab2_Master's deep learning example, but I adjust the number of feature, training data and epoch in order to find some influential points."
    ]
   },
   {
@@ -2184,7 +2207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (2) Build neural network"
+    "#### (2) Build neural network\n",
+    "Here we translate 7 labels into one-hot encoding."
    ]
   },
   {
@@ -2313,6 +2337,13 @@
     "\n",
     "output_shape = len(label_encoder.classes_)\n",
     "print('output_shape: ', output_shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This network includes 2 ReLU hidden layers, and a softmax function to transform output from output layer. Besides, the loss function and optimizer is cross entropy and adam, respectively."
    ]
   },
   {
@@ -2641,7 +2672,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
@@ -2812,14 +2845,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third try is training with more epochs in order to ensure that more epochs doesn't improve the score. I use another 25 epochs to train the model which has already trained by 3/4 data with 25 epochs(the work doesn't show in the no). Indeed, the result isn't higher than the first one."
+    "The third try is training with more epochs in order to ensure that more epochs doesn't improve the score. I use another 25 epochs to train the model which has already trained by 3/4 data with 25 epochs(the work doesn't show in this notebook). Indeed, the result isn't higher than the first one."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final try is training with less epochs. Below is the work for building the network and training it with only 9 epochs. It's almost the same as above work. The result is only higher a little bit than 25 epochs. Thus, it seems that the number of epochs doesn't affect a lot in this task."
+    "The final try is training with less epochs. The result is only higher a little bit than 25 epochs. Thus, it seems that the number of epochs doesn't affect a lot in this task. Below is the work for building the network and training it with only 9 epochs. It's almost the same as above work. "
    ]
   },
   {
@@ -2882,7 +2915,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## deal with label (string -> one-hot)\n",
@@ -3127,7 +3162,7 @@
    "metadata": {},
    "source": [
     "### 3. Conclusion\n",
-    "From all works above, we can get some conclusions. First, 500 features gets higher training accuracy at the first time than 300 features. That is, more features can include more useful informations. Second, more training data can really get higher score. Third, the number of epochs doesn't affect a lot in this competition."
+    "From all works above, we can get some conclusions. First, in traditional machine learning way, average word vectors by w2v couldn't get high accuracy since it can not express the context meaning well. In deep learning, second, 500 features gets higher training accuracy at the first time than 300 features. That is, more features can include more useful informations. Third, more training data can really get higher score. Finally, the number of epochs doesn't affect a lot in this competition."
    ]
   }
  ],
